--- a/index.html
+++ b/index.html
@@ -45,25 +45,25 @@
             </div>
         </div>
     </header>
-    <div class="container-fuid">
+    <div class="container">
         <div class="sessao1">
             <h3>Formação</h3>
             <div class="row">
             <div id="grid" class="col-md-3 col-sm-6">
                 <p><b>Lorem ipsum</b></p>
-                <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi arcu mi, pharetra ut fermentum vitae, laoreet in velit.</small>   
+                <a>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi arcu mi, pharetra ut fermentum vitae, laoreet in velit.</a>     
             </div>
             <div id="grid" class="col-md-3 col-sm-6">
                 <p><b>Lorem ipsum</b></p>
-                <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi arcu mi, pharetra ut fermentum vitae, laoreet in velit.</small>   
+                <a>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi arcu mi, pharetra ut fermentum vitae, laoreet in velit.</a>      
             </div>
             <div id="grid" class="col-md-3 col-sm-6">
                 <p><b>Lorem ipsum</b></p>
-                <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi arcu mi, pharetra ut fermentum vitae, laoreet in velit.</small>   
+                <a>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi arcu mi, pharetra ut fermentum vitae, laoreet in velit.</a>      
             </div>
             <div id="grid" class="col-md-3 col-sm-6">
                 <p><b>Lorem ipsum</b></p>
-                <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi arcu mi, pharetra ut fermentum vitae, laoreet in velit.</small>   
+                <a>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi arcu mi, pharetra ut fermentum vitae, laoreet in velit.</a>    
             </div>
         </div>
         </div>
